syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.uetmydinh.lib";
option java_outer_classname = "KeyGenerationServiceProto";

service KeyGenerationService {
    rpc GenerateKey (KeyGenerationRequest) returns (KeyGenerationResponse) {}
}

message KeyGenerationRequest {}

message KeyGenerationResponse {
    string key = 1;
}